tests/ui/attributes/invalid-repr.stderr
error[E0517]: attribute should be applied to a struct, enum, function, associated function, or union
  --> $DIR/invalid-repr.rs:1:8
   |
LL | #[repr(align(16))]
   |        ^^^^^^^^^
LL |
LL | pub type Foo = i32;
   | ------------------- not a struct, enum, function, associated function, or union

error: aborting due to previous error

For more information about this error, try `rustc --explain E0517`.
